ferritin/src/snapshots/ferritin__tests__fuzzy_matching_typo_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::TestStruct::test_metod\"), &\nget_fixture_crate_path ())"
---
{
  "nodes": [
    {
      "type": "paragraph",
      "spans": [
        {
          "text": "Could not find 'crate::TestStruct::test_metod'",
          "style": "Plain"
        }
      ]
    },
    {
      "type": "paragraph",
      "spans": [
        {
          "text": "Did you mean:",
          "style": "Plain"
        }
      ]
    },
    {
      "type": "list",
      "items": [
        {
          "content": [
            {
              "type": "paragraph",
              "spans": [
                {
                  "text": "crate::TestStruct::ASSOCIATED_CONST",
                  "style": "Plain",
                  "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#associatedconstant.ASSOCIATED_CONST"
                }
              ]
            }
          ]
        },
        {
          "content": [
            {
              "type": "paragraph",
              "spans": [
                {
                  "text": "crate::TestStruct::new",
                  "style": "Plain",
                  "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#method.new"
                }
              ]
            }
          ]
        },
        {
          "content": [
            {
              "type": "paragraph",
              "spans": [
                {
                  "text": "crate::TestStruct::get_field",
                  "style": "Plain",
                  "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#method.get_field"
                }
              ]
            }
          ]
        },
        {
          "content": [
            {
              "type": "paragraph",
              "spans": [
                {
                  "text": "crate::TestStruct::increment_count",
                  "style": "Plain",
                  "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#method.increment_count"
                }
              ]
            }
          ]
        },
        {
          "content": [
            {
              "type": "paragraph",
              "spans": [
                {
                  "text": "crate::submodule",
                  "style": "Plain",
                  "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/index.html"
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}
