ferritin/src/snapshots/ferritin__tests__fuzzy_matching_typo_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct::test_metod\"),\nOutputMode :: Plain, & get_fixture_crate_path ())"
---
Could not find 'crate::TestStruct::test_metod'

Did you mean:

  ◦ crate::TestStruct::get_field

  ◦ crate::TestStruct::new

  ◦ crate::TestStruct::increment_count

  ◦ crate::TestStruct::ASSOCIATED_CONST

  ◦ crate::TestEnum
