ferritin/src/snapshots/ferritin__tests__fuzzy_matching_typo_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct::test_metod\"),\nOutputMode :: Tty, & get_fixture_crate_path ())"
---
Could not find 'crate::TestStruct::test_metod'

Did you mean:

  ◦ [crate::TestStruct::ASSOCIATED_CONST](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#associatedconstant.ASSOCIATED_CONST)

  ◦ [crate::TestStruct::new](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.new)

  ◦ [crate::TestStruct::get_field](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.get_field)

  ◦ [crate::TestStruct::increment_count](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.increment_count)

  ◦ [crate::submodule](https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/index.html)
