ferritin/src/snapshots/ferritin__tests__get_crate_b_prefix_inner_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate_b::prefix_inner\"), OutputMode ::\nAi, & get_test_workspace_path ())"
---
Module crate_b::prefix_inner — in crate-b (0.1.0)

## Structs

- CratePrefixAlias
- SuperPrefixAlias
