ferritin/src/snapshots/ferritin__tests__get_crate_b_prefix_inner_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate_b::prefix_inner\"), &\nget_test_workspace_path ())"
---
{
  "canonicalUrl": "https://docs.rs/crate-b/0.1.0/crate-b/prefix_inner/index.html",
  "meta": {
    "name": "prefix_inner",
    "kind": "module",
    "visibility": "public",
    "definedAt": "crate_b::prefix_inner",
    "crateName": "crate-b",
    "crateVersion": "0.1.0"
  },
  "body": {
    "kind": "module",
    "items": [
      {
        "path": "SuperPrefixAlias",
        "kind": "struct",
        "url": "https://docs.rs/crate-a/0.1.0/crate-a/struct.SuperPrefixAlias.html"
      },
      {
        "path": "CratePrefixAlias",
        "kind": "struct",
        "url": "https://docs.rs/crate-a/0.1.0/crate-a/struct.CratePrefixAlias.html"
      }
    ]
  }
}
