ferritin/src/snapshots/ferritin__tests__get_crate_b_prefix_inner_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate_b::prefix_inner\"), OutputMode ::\nPlain, & get_test_workspace_path ())"
---
Item: prefix_inner
Kind: Module
Visibility: Public
Defined at: crate_b::prefix_inner
In crate: crate-b (0.1.0)

Structs

  ◦ CratePrefixAlias
