ferritin/src/snapshots/ferritin__tests__get_crate_b_prefix_inner_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate_b::prefix_inner\"), OutputMode ::\nTestMode, & get_test_workspace_path ())"
---
<p>
<strong>Item:</strong> prefix_inner
<strong>Kind:</strong> Module
<strong>Visibility:</strong> Public
<strong>Defined at:</strong> <type-name>crate_b</type-name><punctuation>::</punctuation><type-name>prefix_inner</type-name>
<strong>In crate:</strong> crate-b (0.1.0)</p>
<section><section-title>Structs</section-title><list>
  <item><p>
<type-name>CratePrefixAlias</type-name> </p>
</item>
  <item><p>
<type-name>SuperPrefixAlias</type-name> </p>
</item>
</list>
</section>
