ferritin/src/snapshots/ferritin__tests__get_crate_b_prefix_inner_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate_b::prefix_inner\"), OutputMode ::\nTty, & get_test_workspace_path ())"
---
Item: prefix_inner
Kind: Module
Visibility: Public
Defined at: [crate_b](https://docs.rs/crate-b/0.1.0/crate_b/index.html)::[prefix_inner](https://docs.rs/crate-b/0.1.0/crate_b/prefix_inner/index.html)
In crate: crate-b (0.1.0)

Structs

  ◦ [CratePrefixAlias](https://docs.rs/crate-a/0.1.0/crate_a/struct.CratePrefixAlias.html) 

  ◦ [SuperPrefixAlias](https://docs.rs/crate-a/0.1.0/crate_a/struct.SuperPrefixAlias.html)
